# Quadrium

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust-ubuntu.yml
src/: main.rs
src/Controller/: EventManager.rs  mod.rs
src/GUI/: GUIManager.rs  IcedGUIManager.rs  mod.rs
src/audio_reader/: flac_reader.rs  mod.rs
src/utils/: file_reader.rs  mod.rs
